[project]
name = "geo-assistant"
version = "0.0.1"
description = "Geo Assistant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph",
    "fastapi",
    "pydantic",
    "geojson_pydantic",
    "streamlit",
    "httpx",
    "uvicorn[standard]",
    "langchain-ollama",
    "langchain",
    "python-dotenv",
    "duckdb",
    "shapely",
    "pystac-client",
    "planetary-computer",
    "odc-stac>=0.3.9",
    "xarray",
    "matplotlib",
    "geopandas>=1.1.1",
    "dspy>=3.0.4",
    "watchdog>=6.0.0",
    "folium>=0.15.0",
    "lancedb>=0.25.3",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pre-commit",
    "jupyterlab>=4.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geo_assistant"]

[tool.pytest.ini_options]
addopts = "--color=yes"
asyncio_mode = "auto"

[tool.ruff.lint]
select = [
    "COM",  # flake8-commas
    "F",    # pyflakes
    "I",    # isort
    "RUF",  # ruff-specific
    "UP",   # pyupgrade
]
